# hyprs-sdk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: live-hyprland.yml  source-drift-gate.yml
.sources/: .version
benches/: command_building.rs  dispatch_building.rs  event_parsing.rs  json_deser.rs
docs/plans/: 2026-02-14-hypr-sdk-skeleton-design.md  2026-02-14-phase1-scaffold.md  2026-02-15-wayland-protocols-design.md  2026-02-15-wayland-protocols-phase1.md  2026-02-23-hypr-stack-feature-gating-audit.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_command_building.rs  fuzz_event_parse.rs  fuzz_json_responses.rs  fuzz_window_address.rs
scripts/: live-full-smoke.sh  live-ipc-smoke.sh  live-plugin-e2e.sh  update-sources.sh
src/: error.rs  hyprpm.rs  lib.rs
src/config/: mod.rs  monitor_rule.rs  option.rs  rules.rs  workspace_rule.rs
src/dispatch/: exec.rs  focus.rs  group.rs  input.rs  layout.rs  misc.rs  mod.rs  movement.rs  window.rs  workspace.rs
src/ipc/: blocking.rs  client.rs  commands.rs  common.rs  events.rs  instance.rs  mod.rs  responses.rs  socket.rs  window_property.rs
src/ipc/events/: parser.rs  stream.rs  types.rs
src/plugin/: api.rs  config.rs  decoration.rs  dispatcher.rs  ffi.rs  hooks.rs  layout.rs  lifecycle.rs  mod.rs  types.rs
src/plugin/api/: function_hooks.rs  hooks.rs  hyprctl.rs  notify.rs  version.rs
src/plugin/bridge/: bridge_compat.cpp  bridge_config.cpp  bridge_decoration.cpp  bridge_dispatch.cpp  bridge_hooks.cpp  bridge_hyprctl.cpp  bridge_layout.cpp  bridge_layout_floating.cpp  bridge_layout_legacy.cpp  bridge_layout_tiled.cpp  bridge_lifecycle.cpp  bridge_memory.cpp  bridge_misc.cpp  common.h
src/plugin/layout/: common.rs  floating.rs  legacy.rs  tiled.rs
src/protocols/: connection.rs  ctm_control.rs  data_control.rs  ext_foreign_toplevel_list.rs  ext_workspace.rs  focus_grab.rs  foreign_toplevel.rs  gamma_control.rs  global_shortcuts.rs  hyprland_surface.rs  idle.rs  idle_inhibit.rs  layer_shell.rs  mod.rs  output_management.rs  output_power.rs  pointer_warp.rs  screencopy.rs  session_lock.rs  toplevel_export.rs  virtual_keyboard.rs  virtual_pointer.rs
src/protocols/data_control/: client.rs  dispatch.rs  state.rs
src/protocols/layer_shell/: client.rs  dispatch.rs  types.rs
src/protocols/output_management/: client.rs  dispatch.rs  mod.rs  types.rs
src/protocols/screencopy/: client.rs  dispatch.rs  mod.rs  types.rs
src/types/: common.rs  layer.rs  mod.rs  monitor.rs  window.rs  workspace.rs
tests/: config_monitor_rule.rs  config_option.rs  config_rules.rs  config_workspace_rule.rs  dispatch.rs  error.rs  error_wayland.rs  hyprpm.rs  ipc_commands.rs  ipc_event_stream.rs  ipc_events.rs  ipc_instance.rs  ipc_responses.rs  ipc_socket.rs  ipc_window_property.rs  live_cli_parity.rs  live_full_smoke.rs  live_ipc_smoke.rs  live_plugin_e2e.rs  plugin_api.rs  plugin_config.rs  plugin_decoration.rs  plugin_dispatcher.rs  plugin_hooks.rs  plugin_layout.rs  plugin_lifecycle_macro.rs  plugin_types.rs  types_common.rs  types_layer.rs  types_monitor.rs  types_window.rs  types_workspace.rs  wayland_connection.rs  wayland_ctm_control.rs  wayland_data_control.rs  wayland_ext_foreign_toplevel_list.rs  wayland_ext_workspace.rs  wayland_focus_grab.rs  wayland_foreign_toplevel.rs  wayland_gamma_control.rs  (+12 more)
tests/fixtures/: plugin_smoke_cpp.cpp
tools/: main.py  pyproject.toml
tools/hypr_tui/: app.py  runners.py
