[package]
name = "hypr-sdk"
version = "0.1.0"
edition = "2024"
description = "Comprehensive Rust SDK for the Hyprland compositor"
license = "MIT"
repository = "https://github.com/ryugen-io/hypr-sdk"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros"] }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
wayland-protocols-misc = { version = "0.3", features = ["client"], optional = true }
wayland-protocols-hyprland = { version = "1.2", features = ["client"], optional = true }

[features]
default = []
blocking = []
wayland = ["wayland-client", "wayland-protocols", "wayland-protocols-wlr", "wayland-protocols-misc", "wayland-protocols-hyprland"]
