[package]
name = "hyprs-sdk"
version = "0.1.0"
edition = "2024"
description = "Comprehensive Rust SDK for the Hyprland compositor"
license = "MIT"
repository = "https://github.com/ryugen-io/hypr-sdk"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "time"] }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
wayland-protocols-misc = { version = "0.3", features = ["client"], optional = true }
wayland-protocols-hyprland = { version = "1.2", features = ["client"], optional = true }

[build-dependencies]
cc = { version = "1", optional = true }
pkg-config = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[features]
default = []
blocking = []
wayland = ["wayland-client", "wayland-protocols", "wayland-protocols-wlr", "wayland-protocols-misc", "wayland-protocols-hyprland"]
plugin-ffi = ["cc", "pkg-config"]

[[bench]]
name = "event_parsing"
harness = false

[[bench]]
name = "json_deser"
harness = false

[[bench]]
name = "command_building"
harness = false

[[bench]]
name = "dispatch_building"
harness = false
