[package]
name = "hypr-sdk-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.hypr-sdk]
path = ".."

[[bin]]
name = "fuzz_event_parse"
path = "fuzz_targets/fuzz_event_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json_responses"
path = "fuzz_targets/fuzz_json_responses.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_window_address"
path = "fuzz_targets/fuzz_window_address.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_command_building"
path = "fuzz_targets/fuzz_command_building.rs"
test = false
doc = false
bench = false
