[project]
name = "hypr-tui"
version = "0.1.0"
description = "TUI dashboard for hypr-sdk test, benchmark, and fuzz results"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.0.0",
]

[project.scripts]
hypr-tui = "hypr_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
